# spc-integration

./: README.md
English/: README.md
backend/: spc-integration.php
src/: amx_defines.h  base64_encoder.cpp  base64_encoder.h  http_client.cpp  http_client.h  http_linux.cpp  http_response.cpp  http_response.h  http_windows.cpp  inclusions.h  logger.h  main.cpp  plugin_defines.h  server_info.cpp  server_info.h  spc-integration.sln  spc-integration.vcxproj  spc-integration.vcxproj.filters  url_validator.cpp  url_validator.h
src/cmake/: CMakeLists.txt  compile.sh
src/docker/: Dockerfile  build.sh
src/sdk/: amx.h  getch.h  plugincommon.h  sclinux.h
src/sdk/amx_library/: amx_alignment.h  amx_calling.h  amx_cell.h  amx_constants.h  amx_macros.h  amx_memory.h  amx_platform.h  amx_structures.h  amx_types.h
translations/Deutsch/: README.md
translations/English/: README.md
translations/Espanol/: README.md
translations/Francais/: README.md
